# gitguard

./: .gitattributes  .gitguard.json.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.gitguard-dashboard/: index.html
.github/actions/gitguard-action/: action.yml
.github/workflows/: ci.yml  publish.yml
.vscode-extension/: package.json
.vscode-extension/src/: extension.js
benchmarks/: README.md
docs/: LAUNCH.md  PYPI.md  awesome-gitguard.md  quickstart.md
docs/demos/: demo.tape  generate_demo.sh
homebrew/: gitguard.rb
src/gitguard/: __init__.py  cli.py
src/gitguard/core/: __init__.py  ai_reviewer.py  ast_analyzer.py  auditor.py  autofix.py  history.py  hooks.py  license.py  models.py  nvd.py  perf.py  reviewer.py  rules.py  sbom.py  scanner.py  verified.py
src/gitguard/dashboard/: __init__.py  server.py
src/gitguard/detectors/: __init__.py  entropy.py  patterns.py  secrets.py  vulnerabilities.py
src/gitguard/notifications/: __init__.py  sender.py
src/gitguard/utils/: __init__.py  config.py  git.py  output.py  sarif.py
tests/: test_cli.py  test_reviewer.py  test_scanner.py  test_secrets.py
