[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitguard"
version = "0.1.0"
description = "AI-powered git security scanner and code review toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "GitGuard Contributors" }]
keywords = ["git", "security", "code-review", "ai", "pre-commit", "secrets", "vulnerabilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
gitguard = "gitguard.cli:main"
gg = "gitguard.cli:main"

[project.urls]
Homepage = "https://github.com/gitguard/gitguard"
Repository = "https://github.com/gitguard/gitguard"
Issues = "https://github.com/gitguard/gitguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gitguard"]

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["E", "F", "I", "N", "UP", "B", "SIM"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gitguard"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
